alert box added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "água",
         "beber",
         "Calcular",
+        "caso",
+        "necessária",
         "quantidade",
         "Quanto",
         "Saúde"
