new alert and script changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
         "água",
         "beber",
         "Calcular",
+        "cálculo",
         "caso",
+        "Esperando",
+        "feito",
         "necessária",
         "quantidade",
         "Quanto",
