Article content add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,136 @@
 {
     "cSpell.words": [
+        "acelerado",
+        "acima",
+        "açucarados",
+        "adicionado",
+        "afirmação",
         "água",
+        "ajuda",
+        "álcool",
+        "alcoólica",
+        "alguém",
+        "Algumas",
+        "alterar",
+        "alternar",
+        "anos",
+        "anteriores",
+        "apresentar",
+        "atividade",
+        "atividades",
+        "aumentar",
+        "baseado",
         "beber",
+        "bebida",
+        "cada",
+        "calculadora",
         "Calcular",
         "cálculo",
+        "caldos",
+        "caminhadas",
         "caso",
+        "cidades",
+        "clima",
+        "condições",
+        "consideração",
+        "Consumo",
+        "copo",
+        "corre",
+        "dependendo",
+        "depois",
+        "desidratar",
+        "deve",
+        "devemos",
+        "deverá",
+        "diarreia",
+        "dica",
+        "Drauzio",
+        "drinque",
+        "enquanto",
+        "episódios",
+        "equação",
+        "errada",
+        "específica",
         "Esperando",
+        "essa",
+        "Essa",
+        "está",
+        "Estado",
+        "exemplo",
+        "fatores",
+        "fazer",
+        "febre",
+        "feita",
         "feito",
+        "física",
+        "físicas",
+        "frios",
+        "geral",
+        "importante",
+        "ingerir",
+        "ingestão",
+        "intensa",
+        "interferem",
+        "inverno",
+        "irão",
+        "levados",
+        "líquido",
+        "líquidos",
+        "litros",
+        "locais",
+        "maior",
+        "mais",
+        "matemática",
+        "mesma",
+        "metabolismo",
+        "Metabolismo",
         "necessária",
+        "necessário",
+        "necessidade",
+        "necessita",
+        "Nível",
+        "opte",
+        "organismo",
+        "outros",
+        "ouvido",
+        "parâmetro",
+        "parâmetros",
+        "perdemos",
+        "pessoas",
+        "pode",
+        "ponto",
+        "Porém",
+        "Portanto",
+        "prática",
+        "precisa",
+        "precisamos",
+        "Provavelmente",
         "quantidade",
         "Quanto",
-        "Saúde"
+        "quentes",
+        "realizada",
+        "Referências",
+        "removidos",
+        "repor",
+        "resposta",
+        "Saúde",
+        "semana",
+        "serão",
+        "serem",
+        "sopas",
+        "suamos",
+        "Também",
+        "tiver",
+        "todos",
+        "tomar",
+        "totalmente",
+        "três",
+        "únicos",
+        "variar",
+        "verão",
+        "verdadeira",
+        "vezes",
+        "você",
+        "vômitos"
     ]
 }
