Article and table styles add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Abaixo",
         "acelerado",
         "acima",
         "açucarados",
@@ -19,6 +20,7 @@
         "atividade",
         "atividades",
         "aumentar",
+        "baseada",
         "baseado",
         "beber",
         "bebida",
@@ -30,12 +32,14 @@
         "caminhadas",
         "caso",
         "cidades",
+        "Classificação",
         "clima",
         "condições",
         "consideração",
         "Consumo",
         "copo",
         "corre",
+        "definida",
         "dependendo",
         "depois",
         "desidratar",
@@ -56,7 +60,10 @@
         "Essa",
         "está",
         "Estado",
+        "etárias",
         "exemplo",
+        "existem",
+        "faixas",
         "fatores",
         "fazer",
         "febre",
@@ -64,16 +71,21 @@
         "feito",
         "física",
         "físicas",
+        "formúla",
+        "fórmula",
         "frios",
         "geral",
+        "grau",
         "importante",
         "ingerir",
         "ingestão",
         "intensa",
         "interferem",
+        "interferir",
         "inverno",
         "irão",
         "levados",
+        "Levemente",
         "líquido",
         "líquidos",
         "litros",
@@ -81,16 +93,22 @@
         "maior",
         "mais",
         "matemática",
+        "Menor",
         "mesma",
         "metabolismo",
         "Metabolismo",
+        "mililitros",
+        "multiplicado",
         "necessária",
         "necessário",
         "necessidade",
         "necessita",
+        "nessa",
         "Nível",
+        "Obesidade",
         "opte",
         "organismo",
+        "outras",
         "outros",
         "ouvido",
         "parâmetro",
@@ -98,6 +116,8 @@
         "perdemos",
         "pessoas",
         "pode",
+        "podem",
+        "pois",
         "ponto",
         "Porém",
         "Portanto",
@@ -109,6 +129,9 @@
         "Quanto",
         "quentes",
         "realizada",
+        "recebe",
+        "recomendação",
+        "recomendações",
         "Referências",
         "removidos",
         "repor",
